# optimalcv

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_QUICK_START.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  mkdocs.yml  start-all.sh  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.render  QUICK_START.md  README.md  README_PDF.md  __init__.py  install_latex.sh  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py
backend/app/resources/: prompts.yaml
backend/app/services/: parsers.py  scraper.py  settings.py
backend/optimalcv/: main.py
backend/optimalcv/resources/: cv-template.tex  template.tex
backend/optimalcv/services/: __init__.py  generator.py  pdf_generator.py
docs/: index.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  settings.css
frontend/src/components/: Button.tsx  Card.tsx  Header.tsx  Input.tsx  PdfPreviewModal.tsx  Preview.tsx  Settings.tsx  Spinner.tsx  TextArea.tsx  Uploader.tsx
frontend/src/pages/: Api.tsx  Generator.tsx  Home.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/styles/: design-system.ts
